# google-test-samples

gmock/1_turtle/: CMakeLists.txt  mock_turtle.h  painter.h  turtle.h  turtle_unittest.cpp
gtest/sample-1/: CMakeLists.txt  sample-1.md  sample1_unittest.cpp
gtest/sample-2/: CMakeLists.txt  sample2.cpp  sample2_unittest.cpp
gtest/sample-3/: CMakeLists.txt  sample-3.md  sample3_unittest.cpp
gtest/sample-4/: CMakeLists.txt
gtest/sample-5/: CMakeLists.txt
